[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adsb_tools"
version = "0.1.32"
authors = [
    { name="herereadthis", email="herereadthis.github@gmail.com" },
]
description = "ADS-B tools for reading Dump1090 messages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests >= 2.28.2',
    'pytz >= 2022.7.1',
    'timezonefinder >= 6.1.9'
]

[project.urls]
"Homepage" = "https://github.com/herereadthis/adsb_tools"
"Bug Tracker" = "https://github.com/herereadthis/adsb_tools/issues"